@@ -9,6 +9,7 @@
 .: WSM: Task: Adding component displayed preview (WSM-77)
 .: WSW: Task: Shop not found if username has changed when scan qr code (WSW-49)
 .: WSW: Task: Checking item type implementation (WSW-47)
+.: WSW: Task: CLONE - Change profile bezel (WSW-53)
 
 ---------------------------------------------
 - 2020-06-11                                -
